--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express-session": "^1.17.2",
     "handlebars-helpers": "^0.10.0",
     "method-override": "^3.0.0",
-    "mongoose": "^5.12.8"
+    "mongoose": "^5.12.8",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
